@@ -32,7 +32,8 @@ If you don't use this option, PHP will use its compiled in default path.
 suPHP_UserGroup (expects user- and groupname)
 
 * Only supported when compiled with setid-mode "force" or "paranoid" *
-Specify the user- and groupname to run PHP-scripts with.
+Specify the user- and groupname to run PHP-scripts with. This setting
+can only be used within a <Directory> or <Location> context.
 Example: suPHP_UserGroup foouser bargroup
 
 
@@ -40,12 +41,14 @@ suPHP_AddHandler <mime-type>
 
 Tells mod_suphp to handle requests with the type <mime-type>.
 Please note this only works, if an action for the handler is specified
-in the suPHP configuration file.
+in the suPHP configuration file. Settings on per-directory level supersede
+settings made on per-server level.
 
 
 suPHP_RemoveHandler <mime-type>
 
-Tells mod_suphp NOT to handle requests with the type <mime-type>.
+Tells mod_suphp NOT to handle requests with the type <mime-type>. This will
+override the suPHP_AddHandler setting made on a higher configuration level.
 
 
 suPHP_PHPPath (expects a path name)
